--- a/app/src/main/res/drawable/basic_bg.xml
+++ b/app/src/main/res/drawable/basic_bg.xml
@@ -3,4 +3,6 @@
     android:shape="rectangle">
     <solid android:color="@color/screen_bg" />
     <corners android:radius="20dp" />
+    <padding android:top="5dp" android:bottom="5dp"/>
+    <stroke android:width="2dp" android:color="@color/black"/>
 </shape>
