--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -47,7 +47,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="10dp"
-                        android:text="Book Name"
+                        android:text="Guide To Indian Stock Market- Jitendra Gala"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -62,6 +62,7 @@
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/book1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -96,7 +97,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="10dp"
-                        android:text="Book Name "
+                        android:text="One Up On Wall Street – Peter Lynch"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -111,6 +112,7 @@
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/book2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -146,7 +148,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="10dp"
-                        android:text="Book Name "
+                        android:text="Share Market Se Kaise Banaye Mene 10 Crore (Hindi)-Nikolas Darvas"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -161,6 +163,7 @@
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/book3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -177,14 +180,16 @@
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/audo1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/button_bg"
                     android:drawableRight="@drawable/headphones"
                     android:drawablePadding="10dp"
                     android:padding="10dp"
-                    android:text="Listion Books For Free"
-                    android:textSize="24sp"
+                    android:text="@string/audioble"
+                    android:textAllCaps="false"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -207,7 +212,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="10dp"
-                        android:text="Book Name "
+                        android:text="Stocks to Riches – Parag Parikh"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -222,6 +227,7 @@
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/book4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -257,7 +263,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="10dp"
-                        android:text="Book Name "
+                        android:text="The Intelligent Investor-Benjamin Graham"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -272,6 +278,7 @@
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/book5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -307,7 +314,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="10dp"
-                        android:text="Book Name "
+                        android:text="The Warren Buffet Way- Robert G. Hagstrom"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -322,6 +329,7 @@
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/book6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -338,14 +346,16 @@
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/audo2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/button_bg"
                     android:drawableRight="@drawable/headphones"
                     android:drawablePadding="10dp"
                     android:padding="10dp"
-                    android:text="Listion Books For Free"
-                    android:textSize="24sp"
+                    android:text="@string/audioble"
+                    android:textAllCaps="false"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <Space
