--- a/app/src/main/res/layout/activity_basic_next.xml
+++ b/app/src/main/res/layout/activity_basic_next.xml
@@ -25,6 +25,17 @@
             android:orientation="vertical"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/next_title"
+                android:textSize="24sp"
+                android:padding="10dp"
+                android:textStyle="bold"
+                android:textAllCaps="false"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         <ImageView
             android:id="@+id/next_image"
             android:padding="8dp"
